docs: 課金・プラン機能に関するドキュメントを追加
- チャンジェログにv0.4.0とv0.5.0の情報を追加
- FAQにプラン・課金に関する質問を追加
- 用語集に無料プラン、プレミアムプラン、ほつれパックを追加
- ガイドにプラン・課金の説明を追加
- ドキュメントトップページにプラン・決済の説明を追加
- ロードマップで決済機能を完了済みに更新
- CreditCardアイコンをMDXコンポーネントに追加

--- a/src/app/docs/changelog/page.mdx
+++ b/src/app/docs/changelog/page.mdx
@@ -6,7 +6,48 @@ export const metadata = {
 
 ヒビオルの更新情報
 
-<ReadTime minutes={3} />
+<ReadTime minutes={5} />
+
+---
+
+## v0.5.0 <VersionBadge version="0.5.0" type="minor" />
+
+**2026年1月13日** - パフォーマンス改善
+
+### 改善
+
+- 投稿の体感速度を向上
+- タイムラインの表示速度を改善
+- 成功オーバーレイのアニメーション改善
+
+---
+
+
+## v0.4.0 <VersionBadge version="0.4.0" type="minor" />
+
+**2026年1月9日** - 課金機能追加
+
+### 新機能
+
+- プレミアムプラン（月額・年額）を追加
+- 無料プランとプレミアムプランの制限管理
+- Stripe Checkoutによる決済処理
+- Stripe Customer Portalによるサブスクリプション管理
+- ほつれパックの追加購入機能
+- プラン・お支払いセクションを設定画面に追加
+
+### 改善
+
+- 無料プランでも十分使える設計を維持
+- プラン選択ページのUIを追加
+- 使用制限の表示を改善
+- Stripe UIを日本語化
+
+### 修正
+
+- ほつれ購入の競合状態を修正
+- Webhookでプラン変更・キャンセル予約が反映されない問題を修正
+- 購入したほつれが表示に反映されない問題を修正
 
 ---
 
@@ -30,7 +71,7 @@ export const metadata = {
 - エクスポート機能に説明パネルを追加
 - スワイプでタブ切り替えに対応
 - グラスモーフィズムUIを適用
-- M PLUS Rounded 1cフォントを導入
+- フォントを改善
 - ソーシャルページのタブUIを改善
 - コンテンツ幅を統一
 
@@ -43,6 +84,7 @@ export const metadata = {
 ### 新機能
 
 - フォロー通知からワンタップでフォローバック可能に
+- 既存ユーザー向けアチーブメントバックフィル機能を追加
 
 ### 修正
 
