--- a/src/app/docs/glossary/page.mdx
+++ b/src/app/docs/glossary/page.mdx
@@ -39,7 +39,7 @@ export const metadata = {
 <GlossaryCard term="エントリ" icon="pen-line">
   **1つの記録**
 
-  テキストや画像を含む1つの記録単位。絵文字1つから投稿可能で、1日に最大20件まで作成可能です（βテスト版）。
+  テキストや画像を含む1つの記録単位。絵文字1つから投稿可能です。無料プランでは1日15件まで、プレミアムプランでは無制限です。
 </GlossaryCard>
 
 <GlossaryCard term="カレンダー" icon="calendar">
@@ -94,6 +94,24 @@ export const metadata = {
   **記録忘れを防ぐ追加通知**
 
   定時リマインドの後、まだ記録がない場合に届く追加の通知。デフォルトで60分後に送信され、最大2回まで届きます。記録すると自動でキャンセルされます。
+</GlossaryCard>
+
+<GlossaryCard term="無料プラン" icon="gift">
+  **基本機能が使える無料プラン**
+
+  1日15件まで投稿、月5枚まで画像を添付できます。基本的な機能はすべて使えるので、まずは無料プランで始めることができます。
+</GlossaryCard>
+
+<GlossaryCard term="プレミアムプラン" icon="crown">
+  **制限なしの有料プラン**
+
+  投稿数・画像添付ともに無制限。月額480円または年額4,200円（約27%お得）で利用できます。より多くの記録を残したい方におすすめです。
+</GlossaryCard>
+
+<GlossaryCard term="ほつれパック" icon="sparkles">
+  **ほつれの追加購入**
+
+  週2回の無料配分に加えて、120円でほつれ1回分を追加購入できます。合計2個まで（無料配分 + 購入分）保持できます。
 </GlossaryCard>
 
 </div>
