--- a/src/app/docs/guide/page.mdx
+++ b/src/app/docs/guide/page.mdx
@@ -188,3 +188,87 @@ export const metadata = {
 ### お祝いを送る
 
 フォロー中のユーザーが達成を解除したら、お祝いを送って応援しましょう。お祝いされた側には通知が届き、継続のモチベーションになります。
+
+---
+
+## プラン・課金について
+
+ヒビオルは**無料プランでも十分に使える**ことを大切にしています。より多くの記録を残したい方は、プレミアムプランをご利用いただけます。
+
+### プラン構成
+
+#### 無料プラン
+
+- **投稿数**: 1日15件まで
+- **画像添付**: 月5枚まで
+- **価格**: 無料
+
+<Tip type="success">
+無料プランでも基本的な機能はすべて使えます。まずは無料プランで始めて、必要に応じてプレミアムにアップグレードできます。
+</Tip>
+
+#### プレミアムプラン
+
+- **投稿数**: 無制限
+- **画像添付**: 無制限
+- **月額プラン**: 480円/月
+- **年額プラン**: 4,200円/年（月額350円換算・約27%お得）
+
+<Tip type="info">
+年額プランがおすすめです。月額プランと比べて約27%お得になります。
+</Tip>
+
+### 現在のプランを確認する
+
+ソーシャルページの「設定」タブにある「プラン・お支払い」セクションで、現在のプランと使用状況を確認できます。
+
+- **無料プラン利用中**: 今日の投稿残数と今月の画像添付残数が表示されます
+- **プレミアム利用中**: 「無制限」と表示されます
+
+### プレミアムにアップグレードする
+
+<div className="mt-4 space-y-3">
+  <GuideStep number={1}>
+    ソーシャルページの「設定」タブを開きます
+  </GuideStep>
+  <GuideStep number={2}>
+    「プラン・お支払い」セクションの「プレミアムプランに切り替える」ボタンをタップします
+  </GuideStep>
+  <GuideStep number={3}>
+    プラン選択ページで、月額または年額プランを選択します
+  </GuideStep>
+  <GuideStep number={4}>
+    Stripe Checkoutで決済を完了します
+  </GuideStep>
+</div>
+
+<Tip type="warning">
+決済はStripeを通じて安全に処理されます。クレジットカード情報は当社では保存されません。
+</Tip>
+
+### サブスクリプションを管理する
+
+プレミアムプランに加入している場合、「プラン・お支払いを管理」ボタンからStripe Customer Portalにアクセスできます。
+
+Customer Portalでは以下の操作が可能です：
+
+- プランの変更（月額⇔年額）
+- 支払い方法の更新
+- サブスクリプションのキャンセル
+- 請求履歴の確認
+
+<Tip type="info">
+サブスクリプションをキャンセルしても、有効期限まではプレミアム機能を利用できます。期間終了時に自動的に無料プランに戻ります。
+</Tip>
+
+### ほつれを追加購入する
+
+週2回の無料配分に加えて、ほつれを追加で購入できます。
+
+- **価格**: 120円（ほつれ1回分）
+- **上限**: 合計2個まで（無料配分 + 購入分）
+- **購入方法**: 「プラン・お支払い」セクションの「ほつれを追加購入」から購入できます
+
+<Tip type="info">
+ほつれは週2回の無料配分で十分な場合が多いですが、特別な週に備えて追加購入しておくと安心です。
+</Tip>
