--- a/src/app/docs/roadmap/page.mdx
+++ b/src/app/docs/roadmap/page.mdx
@@ -62,6 +62,14 @@ export const metadata = {
   </div>
 </SectionCard>
 
+<SectionCard title="決済機能（v0.4.0）">
+  <RoadmapStatus status="completed" />
+  <span className="ml-2 text-xs text-muted-foreground">2026年1月</span>
+  <div className="mt-2 text-sm text-muted-foreground">
+    Stripe決済連携、プレミアムプラン（月額・年額）、ほつれ追加購入、サブスクリプション管理機能
+  </div>
+</SectionCard>
+
 </div>
 
 ---
@@ -69,13 +77,6 @@ export const metadata = {
 ## 予定
 
 <div className="space-y-3">
-
-<SectionCard title="サブスクリプション・決済機能" variant="highlight">
-  <RoadmapStatus status="planned" />
-  <div className="mt-2 text-sm text-muted-foreground">
-    プレミアムプランの仕様策定、Stripe決済連携、プラン管理機能
-  </div>
-</SectionCard>
 
 <SectionCard title="パフォーマンス改善">
   <RoadmapStatus status="planned" />
