--- a/src/app/docs/page.mdx
+++ b/src/app/docs/page.mdx
@@ -31,44 +31,62 @@ ADHD当事者のための瞬間記録アプリ
     <span className="text-sm text-muted-foreground">思いついた瞬間にサッと記録。長文も短文も、画像もOK。</span>
   </div>
 
-  <div className="rounded-lg border bg-card p-4">
-    <div className="flex items-center gap-2 mb-2">
-      <DocIcon name="flame" className="text-primary" />
-      <span className="font-medium">ストリーク</span>
-    </div>
-    <span className="text-sm text-muted-foreground">Duolingo式の継続モチベーション。毎日の記録で連続日数がカウント。</span>
+<div className="rounded-lg border bg-card p-4">
+  <div className="flex items-center gap-2 mb-2">
+    <DocIcon name="flame" className="text-primary" />
+    <span className="font-medium">ストリーク</span>
   </div>
+  <span className="text-sm text-muted-foreground">
+    Duolingo式の継続モチベーション。毎日の記録で連続日数がカウント。
+  </span>
+</div>
+
+<div className="rounded-lg border bg-card p-4">
+  <div className="flex items-center gap-2 mb-2">
+    <DocIcon name="shield" className="text-primary" />
+    <span className="font-medium">ほつれ</span>
+  </div>
+  <span className="text-sm text-muted-foreground">
+    週2回のスキップ機能。忙しい日も継続が途切れない安心設計。
+  </span>
+</div>
+
+<div className="rounded-lg border bg-card p-4">
+  <div className="flex items-center gap-2 mb-2">
+    <DocIcon name="calendar" className="text-primary" />
+    <span className="font-medium">カレンダー</span>
+  </div>
+  <span className="text-sm text-muted-foreground">
+    月間の記録を俯瞰。過去の自分を振り返るきっかけに。
+  </span>
+</div>
+
+<div className="rounded-lg border bg-card p-4">
+  <div className="flex items-center gap-2 mb-2">
+    <DocIcon name="bell" className="text-primary" />
+    <span className="font-medium">通知</span>
+  </div>
+  <span className="text-sm text-muted-foreground">
+    リマインドで記録を忘れない。追いリマインドで確実にサポート。
+  </span>
+</div>
+
+<div className="rounded-lg border bg-card p-4">
+  <div className="flex items-center gap-2 mb-2">
+    <DocIcon name="user-plus" className="text-primary" />
+    <span className="font-medium">ソーシャル</span>
+  </div>
+  <span className="text-sm text-muted-foreground">
+    仲間と継続を応援し合う。達成をお祝いしてモチベーションUP。
+  </span>
+</div>
 
   <div className="rounded-lg border bg-card p-4">
     <div className="flex items-center gap-2 mb-2">
-      <DocIcon name="shield" className="text-primary" />
-      <span className="font-medium">ほつれ</span>
+      <DocIcon name="credit-card" className="text-primary" />
+      <span className="font-medium">プラン・決済</span>
     </div>
-    <span className="text-sm text-muted-foreground">週2回のスキップ機能。忙しい日も継続が途切れない安心設計。</span>
-  </div>
-
-  <div className="rounded-lg border bg-card p-4">
-    <div className="flex items-center gap-2 mb-2">
-      <DocIcon name="calendar" className="text-primary" />
-      <span className="font-medium">カレンダー</span>
-    </div>
-    <span className="text-sm text-muted-foreground">月間の記録を俯瞰。過去の自分を振り返るきっかけに。</span>
-  </div>
-
-  <div className="rounded-lg border bg-card p-4">
-    <div className="flex items-center gap-2 mb-2">
-      <DocIcon name="bell" className="text-primary" />
-      <span className="font-medium">通知</span>
-    </div>
-    <span className="text-sm text-muted-foreground">リマインドで記録を忘れない。追いリマインドで確実にサポート。</span>
-  </div>
-
-  <div className="rounded-lg border bg-card p-4">
-    <div className="flex items-center gap-2 mb-2">
-      <DocIcon name="user-plus" className="text-primary" />
-      <span className="font-medium">ソーシャル</span>
-    </div>
-    <span className="text-sm text-muted-foreground">仲間と継続を応援し合う。達成をお祝いしてモチベーションUP。</span>
+    <span className="text-sm text-muted-foreground">無料プランから始められます。プレミアムで投稿数・画像無制限に。</span>
   </div>
 </div>
 
@@ -81,9 +99,9 @@ ADHD当事者のための瞬間記録アプリ
     **ログイン** - Googleアカウントでサインイン
   </GuideStep>
 
-  <GuideStep number={2}>
-    **記録する** - 画面下部の「+」ボタンから新規記録
-  </GuideStep>
+<GuideStep number={2}>
+  **記録する** - 画面下部の「+」ボタンから新規記録
+</GuideStep>
 
   <GuideStep number={3}>
     **続ける** - 毎日の記録でストリークを伸ばそう
@@ -103,13 +121,18 @@ ADHD当事者のための瞬間記録アプリ
     </div>
   </a>
 
-  <a href="/docs/glossary" className="flex items-center gap-3 rounded-lg border bg-card p-4 hover:border-primary/50 transition-colors no-underline">
-    <DocIcon name="sparkles" className="text-primary" />
-    <div>
-      <div className="font-medium text-foreground">用語説明</div>
-      <div className="text-sm text-muted-foreground">ヒビオル独自の用語を解説</div>
+<a
+  href="/docs/glossary"
+  className="flex items-center gap-3 rounded-lg border bg-card p-4 hover:border-primary/50 transition-colors no-underline"
+>
+  <DocIcon name="sparkles" className="text-primary" />
+  <div>
+    <div className="font-medium text-foreground">用語説明</div>
+    <div className="text-sm text-muted-foreground">
+      ヒビオル独自の用語を解説
     </div>
-  </a>
+  </div>
+</a>
 
   <a href="/docs/faq" className="flex items-center gap-3 rounded-lg border bg-card p-4 hover:border-primary/50 transition-colors no-underline">
     <DocIcon name="help-circle" className="text-primary" />
