chore: βテスト関連のコンポーネントとドキュメントを削除
- βテスト用セクションコンポーネントを削除
- チェンジログを正式リリースに更新
- FAQからβテスト版の項目を削除

--- a/src/app/docs/changelog/page.mdx
+++ b/src/app/docs/changelog/page.mdx
@@ -127,7 +127,7 @@ export const metadata = {
 
 ## v0.1.0 <VersionBadge version="0.1.0" type="minor" />
 
-**2025年12月20日** - βテスト版リリース
+**2025年12月20日** - 正式リリース
 
 ### 新機能
 
